# fastapi-essential

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.py  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: build.yaml
alembic/: env.py
alembic/versions/: alembic_versions.md
src/: logs.py  main.py
src/hooks/: README.md
src/models/: README.md
src/modules/: README.md
src/modules/auth/: functions.py  helpers.py  interfaces.py  models.py  routes.py
src/queries/: README.md
src/routes/: README.md  root.py  v1.py
src/utils/: README.md
tests/: README.md
